# duplicate

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cargo-readme.md  git_private_key.enc  rustfmt.toml
.devbots/: needs-triage.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-proposal.md  support-request.md
.github/actions/run-test-groups/: action.yml
.github/workflows/: issue-triage.yml  rust.yml
src/: auto_mods.rs  crate_readme_test.rs  error.rs  lib.rs  module_disambiguation.rs  parse.rs  parse_utils.rs  pretty_errors.rs  substitute.rs  token_iter.rs
tests/: default_features.rs  expansion.rs  short_syntax.rs  tests.rs  trybuild.rs  utils.rs  verbose_syntax.rs
tests/auto_mods/: mod.rs
tests/auto_mods/expected/: first_valid_is_chosen.expanded.rs  short_syntax.expanded.rs
tests/auto_mods/from/: first_valid_is_chosen.rs  short_first_valid_is_chosen.rs  short_syntax.rs
tests/default_features/: mod.rs
tests/errors/: mod.rs
tests/errors/basic/: duplicate_without_duplicates  global_sub_semicolon  short_superfluous_substitution  short_unfinished_identifier_list  substitute_item_with_duplicate_2  substitute_item_with_duplicate_3  substitute_item_with_duplicate_4  verbose_after_ident  verbose_incomplete_substitution_group  verbose_unexpected_substitution_identifier  verbose_wrong_argument_count
tests/errors/highlight/: global_sub_semicolon  only_semicolon  parameters_not_encapsulated  short_missing_substitution  short_missing_substitution_bracket  short_superfluous_substitution  substitute_item_with_duplicate  substitute_item_with_duplicate_2  substitute_item_with_duplicate_3  verbose_after_ident  verbose_incomplete_substitution_group  verbose_not_ident  verbose_semicolon  verbose_unexpected_substitution_identifier  verbose_wrong_argument_count
tests/errors/hint/: duplicate_without_duplicates  global_sub_semicolon  no_inputs  only_semicolon  parameters_not_encapsulated  short_missing_substitution  short_missing_substitution_bracket  short_without_duplicates  substitute_item_with_duplicate  substitute_item_with_duplicate_2  substitute_item_with_duplicate_3  substitute_item_with_duplicate_4  verbose_incomplete_substitution_group  verbose_not_ident  verbose_semicolon  verbose_unexpected_substitution_identifier  verbose_wrong_argument_count
tests/errors/source/: duplicate_without_duplicates.rs  global_sub_semicolon.rs  no_inputs.rs  only_semicolon.rs  short_missing_substitution_bracket.rs  short_superfluous_substitution.rs  short_unfinished_identifier_list.rs  substitute_item_with_duplicate.rs  substitute_item_with_duplicate_2.rs  substitute_item_with_duplicate_3.rs  substitute_item_with_duplicate_4.rs  verbose_after_ident.rs  verbose_incomplete_substitution_group.rs  verbose_not_ident.rs  verbose_semicolon.rs  verbose_unexpected_substitution_identifier.rs  verbose_wrong_argument_count.rs
tests/expand/: nested_duplicate.expanded.rs  nested_duplicate.rs  short_from_macro.rs  short_syntax.rs  verbose_from_macro.expanded.rs
tests/expand/expected/: short_ident_argument.expanded.rs
tests/expand/expected_both/: syntax.expanded.rs
tests/expand/from/: short_ident_argument.rs  short_syntax.rs  verbose_from_macro.rs  verbose_syntax.rs
tests/module_disambiguation/: mod.rs
tests/module_disambiguation/errors/: .gitignore  mod.rs
tests/module_disambiguation/expected/: short_first_valid_is_chosen.expanded.rs
tests/module_disambiguation/expected_both/: syntax.expanded.rs
tests/module_disambiguation/from/: short_first_valid_is_chosen.rs  short_syntax.rs  verbose_syntax.rs
tests/no_features/: README.md  mod.rs
tests/no_features/edition_2021/: .gitignore  Cargo.toml
tests/no_features/expected/: insert.expanded.rs  (+4 more)
tests/no_features_errors/: mod.rs
tests/pretty_errors/: mod.rs
tests/trybuild/: separate_callsite_and_item_errors.rs  separate_callsite_and_item_errors.stderr
(+33 files in other folders)
