[package]
name = "duplicate"
version = "0.0.0"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides macros for duplication of code with variable substitution."
repository = "https://github.com/Emoun/duplicate"
documentation = "https://docs.rs/duplicate"
readme = "cargo-readme.md"

categories = ["development-tools"]

exclude = ["rustfmt.toml", ".gitignore", "README.md", "CHANGELOG.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro2-diagnostics = { version = "0.10", optional = true }
proc-macro2 = { version = "1.0.85", optional = true }
heck = { version = "0.4.0", optional = true }

[dev-dependencies]
duplicate_macrotest = "1.0.4"
doc-comment = "0.3.3"
serde = "1.0.105, < 1.0.157" # Needed because macrotest's cargo.toml uses 1.0 however fails with < 1.0.105 and >= 1.0.157 (because it uses syn v2)
regex = "1.6.0"
rustversion = "1.0.7"

[features]
default = ["pretty_errors", "module_disambiguation"]
pretty_errors = ["dep:proc-macro2-diagnostics", "dep:proc-macro2"]
module_disambiguation = ["heck"]
fail-on-warnings = [] # Forces compilation to fail if any warnings are given. Used in CI.

[package.metadata.docs.rs]
all-features = true
