[package]
name = "duplicate"
version = "0.0.0"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2021"
rust-version = "1.65"

license = "MIT OR Apache-2.0"
description = "Provides macros for duplication of code with variable substitution."
repository = "https://github.com/Emoun/duplicate"
documentation = "https://docs.rs/duplicate"
readme = "cargo-readme.md"

categories = ["development-tools"]

exclude = ["rustfmt.toml", ".gitignore", "README.md", "CHANGELOG.md"]

[lib]
proc-macro = true

[dependencies]
# We have to turn of coloring (remove default features), because it causes the Unicode escape character to be emitted
# in hints. See: https://github.com/SergioBenitez/proc-macro2-diagnostics/issues/11
proc-macro2-diagnostics = { version = "0.10", default-features = false, optional = true }
proc-macro2 = { version = "1.0.85", optional = true }
heck = { version = "0.5", optional = true }

[dev-dependencies]
duplicate_macrotest = "1.0.8"
doc-comment = "0.3.3"
serde = "1.0.105" # Needed because macrotest's cargo.toml uses 1.0 however fails with < 1.0.105
regex = "1.6.0"
rustversion = "1.0.7"

[features]
default = ["pretty_errors", "module_disambiguation"]
pretty_errors = ["dep:proc-macro2-diagnostics", "dep:proc-macro2"]
module_disambiguation = ["dep:heck"]
fail-on-warnings = [] # Forces compilation to fail if any warnings are given. Used in CI.

[package.metadata.docs.rs]
all-features = true
